--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -3,43 +3,74 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:background="@drawable/background"
     android:orientation="vertical"
     tools:layout_editor_absoluteX="8dp"
     tools:layout_editor_absoluteY="8dp">
 
-        <ImageView
-            android:id="@+id/tattoo_image"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:contentDescription="@string/tattoo_description"
-            tools:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal"/>
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="35dp"
+        card_view:cardCornerRadius="10dp"
+        android:background="@color/colorWhitish"
+        card_view:cardElevation="10dp">
 
-        <Switch
-            android:id="@+id/switch_visibility"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:showText="true"
-            android:textAlignment="viewStart"
-            android:textOff="@string/sw_public"
-            android:textOn="@string/sw_private"/>
+            android:layout_height="508dp"
+            android:orientation="vertical">
 
-        <Button
-            android:id="@+id/edit_finish"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Submit"/>
+            <com.tattood.tattood.DrawView
+                android:id="@+id/tattoo_image"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_margin="5dp"
+                android:adjustViewBounds="true"
+                android:background="@android:color/transparent"
+                android:contentDescription="@string/tattoo_description"
+                android:scaleType="fitCenter"
+                tools:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal"/>
 
-        <Button
-            android:id="@+id/add_tag"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/new_tag"/>
+            <Switch
+                android:id="@+id/switch_visibility"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:showText="true"
+                android:textAlignment="viewStart"
+                android:textOff="@string/sw_public"
+                android:textOn="@string/sw_private"/>
 
-        <ListView
-            android:id="@+id/tag_list_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </ListView>
+            <Button
+                android:id="@+id/edit_finish"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Submit"/>
+
+            <Button
+                android:id="@+id/add_tag"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/new_tag"/>
+
+            <com.cunoraz.tagview.TagView
+                xmlns:tagview="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/tag_list_edit"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                tagview:lineMargin="5dp"
+                tagview:tagMargin="5dp"
+                tagview:textPaddingBottom="5dp"
+                tagview:textPaddingLeft="8dp"
+                tagview:textPaddingRight="8dp"
+                tagview:textPaddingTop="5dp"/>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
