--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorWhite">#EBEBEB</color>
+    <color name="colorWhitish">#EBEBEB</color>
     <color name="colorDark">#3c1b0e</color>
     <color name="colorPurple">#4b1b61</color>
     <color name="colorPink">#c75ba5</color>
