--- a/app/src/main/res/layout/activity_tattoo_edit.xml
+++ b/app/src/main/res/layout/activity_tattoo_edit.xml
@@ -3,7 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/apk/res-auto"
-    xmlns:tools2="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -12,66 +11,90 @@
     android:background="@drawable/background">
 
     <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="35dp"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
-        card_view:cardCornerRadius="10dp"
-        card_view:cardElevation="10dp">
+        android:layout_marginTop="35dp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="10dp">
 
-        <LinearLayout
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="508dp"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/tattoo_image"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_margin="5dp"
-                android:adjustViewBounds="true"
-                android:background="@android:color/transparent"
-                android:contentDescription="@string/tattoo_description"
-                android:scaleType="fitCenter"
-                tools:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal"/>
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:weightSum="1">
 
-        <Switch
-            android:id="@+id/switch_visibility"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:showText="true"
-            android:textAlignment="viewStart"
-            android:textOff="@string/sw_public"
-            android:textOn="@string/sw_private"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.9"
+                    android:orientation="vertical">
 
-        <Button
-            android:id="@+id/edit_finish"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Submit"/>
+                    <ImageView
+                        android:id="@+id/tattoo_image"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="5dp"
+                        android:adjustViewBounds="true"
+                        android:background="@android:color/transparent"
+                        android:contentDescription="@string/tattoo_description"
+                        android:scaleType="fitCenter"
+                        tools:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal"/>
+                </LinearLayout>
 
-        <Button
-            android:id="@+id/add_tag"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/new_tag"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.1"
+                    android:background="@color/colorGray"
+                    android:orientation="vertical">
 
-        <com.cunoraz.tagview.TagView
-            xmlns:tagview="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/tag_list_edit"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            tagview:lineMargin="5dp"
-            tagview:tagMargin="5dp"
-            tagview:textPaddingLeft="8dp"
-            tagview:textPaddingTop="5dp"
-            tagview:textPaddingRight="8dp"
-            tagview:textPaddingBottom="5dp" />
-        </LinearLayout>
+                    <Switch
+                        android:id="@+id/switch_visibility"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:showText="true"
+                        android:textAlignment="viewStart"
+                        android:textOff="@string/sw_public"
+                        android:textOn="@string/sw_private"/>
+
+                    <Button
+                        android:id="@+id/edit_finish"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Submit"/>
+
+                    <EditText
+                        android:id="@+id/new_tag"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ems="10"
+                        android:hint="@string/add_new_tag"
+                        android:imeOptions="actionDone"
+                        android:inputType="textPersonName"
+                        android:maxLength="14"
+                        android:maxLines="1"/>
+
+                    <com.cunoraz.tagview.TagView
+                        android:id="@+id/tag_list_edit"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="10dp"
+                        app:lineMargin="5dp"
+                        app:tagMargin="5dp"
+                        app:textPaddingLeft="8dp"
+                        app:textPaddingTop="5dp"
+                        app:textPaddingRight="8dp"
+                        app:textPaddingBottom="5dp" />
+                </LinearLayout>
+            </LinearLayout>
+        </android.support.v4.widget.NestedScrollView>
     </android.support.v7.widget.CardView>
 </LinearLayout>
