--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -2,9 +2,9 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/background"
     android:orientation="vertical"
     tools:layout_editor_absoluteX="8dp"
@@ -20,8 +20,6 @@
         android:layout_marginTop="35dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="10dp">
-
-        <!--app:cardBackgroundColor="@color/colorGray"-->
 
         <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
@@ -89,12 +87,6 @@
                         android:layout_height="wrap_content"
                         android:text="Submit"/>
 
-                    <!--<Button-->
-                    <!--android:id="@+id/add_tag"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:text="@string/new_tag"/>-->
-
                     <EditText
                         android:id="@+id/new_tag"
                         android:layout_width="match_parent"
@@ -103,6 +95,7 @@
                         android:hint="@string/add_new_tag"
                         android:imeOptions="actionDone"
                         android:inputType="textPersonName"
+                        android:maxLength="14"
                         android:maxLines="1"/>
 
                     <com.cunoraz.tagview.TagView
@@ -120,8 +113,6 @@
                 </LinearLayout>
 
             </LinearLayout>
-
         </android.support.v4.widget.NestedScrollView>
-
     </android.support.v7.widget.CardView>
 </LinearLayout>
