--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -3,7 +3,8 @@
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/apk/res-auto">
+    xmlns:tools="http://schemas.android.com/apk/res-auto"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:orientation="vertical"
@@ -29,14 +30,11 @@
                 android:thicknessRatio="1.9"
                 tools:cardCornerRadius="40dp"
                 tools:elevation="12dp">
-                <ImageView
+                <com.facebook.drawee.view.SimpleDraweeView
                     android:id="@+id/user_image"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true"
-                    tools:srcCompat="@drawable/common_google_signin_btn_icon_dark_focused">
-                </ImageView>
+                    fresco:placeholderImage="@drawable/ic_person_black_24dp"/>
             </android.support.v7.widget.CardView>
 
             <TextView
