--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -69,7 +69,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="No results found..."
+            android:text="@string/no_results_found"
             android:visibility="invisible"/>
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
