--- a/app/src/main/res/layout/activity_tattoo.xml
+++ b/app/src/main/res/layout/activity_tattoo.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/apk/res-auto"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="643dp"
     android:orientation="vertical"
@@ -62,16 +63,15 @@
                     android:textAlignment="center"/>
             </LinearLayout>
 
-            <ImageView
+            <com.facebook.drawee.view.SimpleDraweeView
                 android:id="@+id/tattoo_image"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:layout_margin="5dp"
-                android:adjustViewBounds="true"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/tattoo_description"
-                android:scaleType="fitCenter"
-                tools:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal"/>
+                fresco:actualImageScaleType="fitCenter"
+                fresco:placeholderImage="@drawable/common_google_signin_btn_icon_dark_normal"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -95,14 +95,6 @@
                     android:layout_gravity="start|center"
                     android:layout_weight="1"/>
 
-                <!--<android.support.design.widget.FloatingActionButton-->
-                    <!--android:id="@+id/fab_camera"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_gravity="end|center"-->
-                    <!--android:layout_margin="@dimen/fab_margin"-->
-                    <!--android:src="@android:drawable/ic_menu_camera"/>-->
-                <!---->
                 <ImageView
                     android:id="@+id/fab_camera"
                     android:layout_width="40dp"
