--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -34,14 +34,12 @@
                     android:thicknessRatio="1.9"
                     tools:cardCornerRadius="40dp"
                     tools:elevation="12dp">
-                    <ImageView
+
+                    <com.facebook.drawee.view.SimpleDraweeView
                         android:id="@+id/user_image"
                         android:layout_width="match_parent"
                         android:layout_height="100dp"
-                        android:layout_alignParentTop="true"
-                        android:layout_centerHorizontal="true"
-                        tools:srcCompat="@drawable/common_google_signin_btn_icon_dark_focused">
-                    </ImageView>
+                        fresco:placeholderImage="@drawable/ic_person_black_24dp"/>
                 </android.support.v7.widget.CardView>
 
                 <TextView
