--- a/app/src/main/res/layout/tattoo_item.xml
+++ b/app/src/main/res/layout/tattoo_item.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:fresco="http://schemas.android.com/apk/res-auto"
               android:padding="10dp"
               android:layout_width="150dp"
               android:layout_height="150dp">
 
-    <ImageView
+    <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/item_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerInside"
+        android:scaleType="fitXY"
         android:gravity="center"
-        app:srcCompat="@mipmap/ic_launcher"
-        android:background="@android:color/transparent"
+        fresco:actualImageScaleType="fitXY"
+        fresco:placeholderImage="@drawable/ic_person_black_24dp"
         android:contentDescription="@string/tattoo_description"/>
 </LinearLayout>
