Modified some stuff

--- a/app/src/main/res/layout/activity_tattoo_edit.xml
+++ b/app/src/main/res/layout/activity_tattoo_edit.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/apk/res-auto"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -37,15 +38,25 @@
                     android:layout_height="0dp"
                     android:layout_weight="2">
 
-                    <ImageView
+                    <com.facebook.drawee.view.SimpleDraweeView
                         android:id="@+id/tattoo_image"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="200dp"
                         android:layout_margin="5dp"
-                        android:adjustViewBounds="false"
                         android:background="@android:color/transparent"
                         android:contentDescription="@string/tattoo_description"
-                        android:scaleType="fitXY"/>
+                        fresco:actualImageScaleType="fitCenter"
+                        fresco:placeholderImage="@drawable/common_google_signin_btn_icon_dark_normal"/>
+
+                    <!--<ImageView-->
+                        <!--android:id="@+id/tattoo_image"-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="match_parent"-->
+                        <!--android:layout_margin="5dp"-->
+                        <!--android:adjustViewBounds="false"-->
+                        <!--android:background="@android:color/transparent"-->
+                        <!--android:contentDescription="@string/tattoo_description"-->
+                        <!--android:scaleType="fitXY"/>-->
 
                     <ImageView
                         android:id="@+id/button_delete"
