--- a/app/src/main/res/layout/activity_tattoo_edit.xml
+++ b/app/src/main/res/layout/activity_tattoo_edit.xml
@@ -35,8 +35,7 @@
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="2">
+                    android:layout_height="200dp">
 
                     <com.facebook.drawee.view.SimpleDraweeView
                         android:id="@+id/tattoo_image"
@@ -47,16 +46,6 @@
                         android:contentDescription="@string/tattoo_description"
                         fresco:actualImageScaleType="fitCenter"
                         fresco:placeholderImage="@drawable/common_google_signin_btn_icon_dark_normal"/>
-
-                    <!--<ImageView-->
-                        <!--android:id="@+id/tattoo_image"-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="match_parent"-->
-                        <!--android:layout_margin="5dp"-->
-                        <!--android:adjustViewBounds="false"-->
-                        <!--android:background="@android:color/transparent"-->
-                        <!--android:contentDescription="@string/tattoo_description"-->
-                        <!--android:scaleType="fitXY"/>-->
 
                     <ImageView
                         android:id="@+id/button_delete"
@@ -71,7 +60,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:background="@color/colorGray"
+                    android:background="@color/colorPureWhite"
                     android:orientation="vertical">
 
                     <LinearLayout
@@ -83,6 +72,7 @@
                             android:id="@+id/switch_visibility"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginBottom="20dp"
                             android:textAlignment="viewStart"/>
 
                         <TextView
@@ -104,31 +94,32 @@
                         android:maxLength="14"
                         android:maxLines="1"/>
 
-                    <com.cunoraz.tagview.TagView
-                        android:id="@+id/tag_list_edit"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="10dp"
-                        app:lineMargin="5dp"
-                        app:tagMargin="5dp"
-                        app:textPaddingBottom="5dp"
-                        app:textPaddingLeft="8dp"
-                        app:textPaddingRight="8dp"
-                        app:textPaddingTop="5dp"/>
-
                     <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="wrap_content">
+
+                        <com.cunoraz.tagview.TagView
+                            android:id="@+id/tag_list_edit"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_margin="10dp"
+                            app:lineMargin="5dp"
+                            app:tagMargin="5dp"
+                            app:textPaddingBottom="5dp"
+                            app:textPaddingLeft="8dp"
+                            app:textPaddingRight="8dp"
+                            app:textPaddingTop="5dp"/>
 
                         <ImageView
                             android:id="@+id/edit_finish"
                             android:layout_width="48dp"
                             android:layout_height="48dp"
-                            android:layout_alignParentEnd="true"
-                            android:layout_alignParentTop="true"
                             android:gravity="end"
-                            app:srcCompat="@drawable/ic_file_upload_black_24dp"/>
+                            app:srcCompat="@drawable/ic_file_upload_black_24dp"
+                            android:layout_alignBottom="@+id/tag_list_edit"
+                            android:layout_alignEnd="@+id/tag_list_edit"/>
                     </RelativeLayout>
+
                 </LinearLayout>
             </LinearLayout>
         </android.support.v4.widget.NestedScrollView>
