--- a/app/src/main/res/drawable-mdpi/google_button_shape.xml
+++ b/app/src/main/res/drawable-mdpi/google_button_shape.xml
@@ -8,11 +8,11 @@
     <corners
         android:radius="7dp" />
 
-    <padding
-        android:left="35dp"
-        android:right="5dp"
-        android:top="15dp"
-        android:bottom="15dp"/>
+    <!--<padding-->
+        <!--android:left="35dp"-->
+        <!--android:right="5dp"-->
+        <!--android:top="15dp"-->
+        <!--android:bottom="15dp"/>-->
 
     <solid android:color="#80f4f0ea"/>
 
