--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,47 +10,56 @@
               android:paddingTop="@dimen/activity_vertical_margin"
               android:background="@drawable/background"
               tools:context="com.tattood.tattood.LoginActivity"
-              android:weightSum="1">
+              android:weightSum="2">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="308dp"
-        android:layout_height="135dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="2dp"
-        android:layout_marginRight="0dp"
-        android:background="@android:color/transparent"
-        android:layout_weight="0.11"
-        android:src="@drawable/tattood_logo4" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="2dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginTop="24dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/tattood_logo4"/>
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/link_signup"
-        android:layout_width="134dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
-        android:layout_marginLeft="15dp"
-        android:text="Sign up with"
-        android:textColor="@color/colorWhite"
-        android:textSize="20dip"
-        android:textStyle="bold" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-    <ImageButton
-        android:id="@+id/login_button"
-        android:layout_width="256dp"
-        android:layout_height="79dp"
-        android:layout_marginBottom="24dp"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/google_button_shape"
-        android:src="@drawable/signup_google_button" />
+        <TextView
+            android:id="@+id/link_signup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="0dp"
+            android:layout_marginStart="15dp"
+            android:text="Sign up with"
+            android:textColor="@color/colorWhite"
+            android:textSize="20dp"
+            android:textStyle="bold"/>
+
+        <ImageButton
+            android:id="@+id/login_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
+            android:layout_marginTop="24dp"
+            android:background="@drawable/google_button_shape"
+            android:src="@drawable/signup_google_button"/>
+    </LinearLayout>
+            <!--android:background="@color/colorWhite"-->
+
 
     <!-- delete this button! -->
-    <Button
-        android:id="@+id/signout_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/sign_out" />
 
 </LinearLayout>
 
