--- a/app/src/main/res/drawable/background_toolbar_translucent.xml
+++ b/app/src/main/res/drawable/background_toolbar_translucent.xml
@@ -4,6 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="270"
-        android:endColor="@android:color/transparent"
-        android:startColor="@color/black_alpha_40"/>
+        android:endColor="@color/colorPureWhite"
+        android:startColor="@color/colorPinkAlpha"/>
+    <!--android:endColor="@android:color/transparent"-->
+
 </shape>
