--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/background"
+    android:background="@drawable/pattern7"
     tools:context="com.tattood.tattood.RegisterActivity">
 
     <EditText
@@ -28,7 +28,7 @@
         android:textStyle="italic"
         android:textColor="@color/colorWhite"
         android:backgroundTint="@color/colorPurple"
-        android:alpha="0.8"
+        android:alpha="0.7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button_register"
