--- a/app/src/main/res/layout/activity_discovery.xml
+++ b/app/src/main/res/layout/activity_discovery.xml
@@ -53,6 +53,31 @@
                     android:layout_marginBottom="0dp"
                     android:layout_weight="1"
                     android:text="@string/see_more"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:weightSum="1">
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_weight="0.1"
+                    android:background="@android:color/transparent"/>
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_weight="0.8"
+                    android:background="@color/colorPrimaryDark"/>
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_weight="0.1"
+                    android:background="@android:color/transparent"/>
             </LinearLayout>
 
             <android.support.v7.widget.RecyclerView
@@ -96,6 +121,33 @@
                     android:layout_weight="1"
                     android:text="@string/see_more"/>
 
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:weightSum="1">
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_weight="0.1"
+                    android:background="@android:color/transparent"/>
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_weight="0.8"
+                    android:background="@color/colorPrimaryDark"/>
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_weight="0.1"
+                    android:background="@android:color/transparent"/>
             </LinearLayout>
 
             <android.support.v7.widget.RecyclerView
