--- a/app/src/main/res/layout/activity_profile2.xml
+++ b/app/src/main/res/layout/activity_profile2.xml
@@ -91,13 +91,13 @@
 
     <!--<include layout="@layout/nested_scrollview"/>-->
 
-    <!--<android.support.design.widget.FloatingActionButton
+    <android.support.design.widget.FloatingActionButton
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        app:layout_anchor="@id/appbar"
+        app:layout_anchor="@+id/viewpager"
         app:layout_anchorGravity="bottom|right|end"
-        android:src="@drawable/ic_discuss"
+        app:srcCompat="@drawable/ic_file_upload_black_24dp"
         android:layout_margin="@dimen/fab_margin"
-        android:clickable="true"/>-->
+        android:clickable="true"/>
 
 </android.support.design.widget.CoordinatorLayout>
