--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="colorGray">#FFE0B2</color>
     <color name="colorDark">#3c1b0e</color>
     <color name="colorPurple">#4b1b61</color>
+    <color name="colorTransPurple">#b94b1b61</color>
     <color name="colorPink">#c75ba5</color>
     <color name="black_alpha_40">#969c5e5f</color>
     <color name="colorPureWhite">#FFFFFF</color>
