Changed GridLayout margin

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,6 +5,7 @@
              tools:context="com.tattood.tattood.ProfileFragment">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview"
+        android:background="@drawable/pattern7"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </FrameLayout>
