--- a/app/src/main/res/layout/activity_discovery.xml
+++ b/app/src/main/res/layout/activity_discovery.xml
@@ -91,11 +91,7 @@
                 android:id="@+id/recent_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="31dp"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintLeft_toLeftOf="@+id/toolbar"
-                app:layout_constraintRight_toRightOf="@+id/toolbar"
-                app:layout_constraintTop_toBottomOf="@+id/see_more_recent"/>
+                android:layout_marginBottom="10dp"/>
 
         </LinearLayout>
 
@@ -170,7 +166,7 @@
                 android:id="@+id/popular_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="30dp"
+                android:layout_marginBottom="10dp"
                 android:paddingBottom="10dp"/>
 
         </LinearLayout>
